Add cart and shipping

--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,4 +5,5 @@
     <p *ngIf="hive.description">
         {{hive.description}}
     </p>
+    <button type="button" (click)="addToCart(hive)"> 🛒🛒🛒</button>
 </div>
