--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,4 +2,4 @@
   <h1>Our Hives</h1>
 </a>
 
-<!-- <a class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a> -->
+<a class="button fancy-button" routerLink="/cart"><i class="material-icons">🛒🛒🛒</i>Checkout 🛒🛒🛒</a>
