--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 /* Global Styles */
-
+app-cart{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:1em;
+}
 * {
     font-family: 'Roboto', Arial, sans-serif;
     color: #616161;
@@ -11,7 +17,12 @@
   body {
     margin: 0;
   }
-  
+  .addForm {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   .container {
     display: flex;
     flex-direction: row;
@@ -81,7 +92,11 @@
     color: white;
     border: none;
   }
-  
+  .flex{
+    display:flex;
+    flex-direction: column;
+    gap:1rem;
+  }
   .button:hover, button:hover {
     opacity: 0.8;
     font-weight: normal;
@@ -137,6 +152,10 @@
     background-color: #EEEEEE;
   }
   
+  .error{
+    color:red;
+    padding-bottom: 1em;
+  }
   
   /*
   Copyright Google LLC. All Rights Reserved.
